# codex-desktop-linux

./: .gitignore  LICENSE  README.md  install-plugin.sh
.agents/plugins/: marketplace.json
.github/workflows/: rust.yml
desktop/archlinux-arm64/: .gitignore  Codex.desktop  PKGBUILD  codex-app.sh  codex-desktop-tray.py  codex-desktop-tray.service  codex-desktop-update.sh  codex-desktop.sh  install.sh  patch-linux-browser-persistence.mjs  patch-linux-dictation.mjs  patch-linux-opaque-bg.mjs  patch-linux-open-targets.mjs  patch-linux-terminal-font.mjs
docs/: browser-feature-parity.md  device-parity.md
plugins/rust-browser-control/: .gitignore  .mcp.json  Cargo.toml  README.md
plugins/rust-browser-control/.codex-plugin/: plugin.json
plugins/rust-browser-control/scripts/: build-release  rust-browser-control-mcp
plugins/rust-browser-control/skills/control-browser/: SKILL.md
plugins/rust-browser-control/src/: browser.rs  main.rs
plugins/rust-browser-control/tests/fixtures/: browser-parity.html  upload.txt
scripts/: codex-browser-control-doctor  codex-browser-control-sync
